Basic data, axis and rule working with Cubism

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="vendor/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="vendor/css/re-com.css">
     <link rel="stylesheet" href="vendor/css/pikaday.css">
+    <!-- <link rel="stylesheet" href="http://square.github.io/cubism/style.css">-->
     <!-- <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css"> -->
     <link href="css/compiled/screen.css" rel="stylesheet" type="text/css">
@@ -15,6 +16,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
+    <script src="http://square.github.io/cubism/cubism.v1.js"></script>
     <script src="js/compiled/app.js"></script>
     <script>mycotrack_frame.core.init();</script>
   </body>
